--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   },
   "dependencies": {
     "@quanxiaoxiao/datav": "^0.1.1",
+    "@quanxiaoxiao/http-router": "^0.1.0",
+    "@quanxiaoxiao/http-utils": "^0.1.0",
     "@quanxiaoxiao/httttp": "^0.2.2",
     "@quanxiaoxiao/mongo": "^0.0.4",
     "@quanxiaoxiao/store": "^0.1.0",
     "@quanxiaoxiao/utils": "^0.2.1",
     "dotenv": "^16.4.4",
     "file-size": "^1.0.0",
+    "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.1.3",
+    "path-to-regexp": "^6.2.1",
     "shelljs": "^0.8.5"
   }
 }
