--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@quanxiaoxiao/datav": "^0.1.1",
     "@quanxiaoxiao/http-router": "^0.1.0",
     "@quanxiaoxiao/http-utils": "^0.1.0",
-    "@quanxiaoxiao/httttp": "^0.2.2",
+    "@quanxiaoxiao/httttp": "^0.3.0",
     "@quanxiaoxiao/mongo": "^0.0.4",
     "@quanxiaoxiao/store": "^0.1.0",
     "@quanxiaoxiao/utils": "^0.2.1",
+    "ajv": "^8.12.0",
     "dotenv": "^16.4.4",
     "file-size": "^1.0.0",
     "http-errors": "^2.0.0",
