--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@quanxiaoxiao/store": "^0.1.0",
     "@quanxiaoxiao/utils": "^0.2.1",
     "ajv": "^8.12.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
     "file-size": "^1.0.0",
     "http-errors": "^2.0.0",
