--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">= 20.0.0"
   },
   "dependencies": {
+    "@quanxiaoxiao/about-net": "^0.7.34",
     "@quanxiaoxiao/datav": "^0.1.1",
     "@quanxiaoxiao/http-router": "^0.1.0",
     "@quanxiaoxiao/http-utils": "^0.1.0",
