--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   },
   "dependencies": {
     "@quanxiaoxiao/datav": "^0.2.0",
-    "@quanxiaoxiao/http-request": "^0.9.0",
-    "@quanxiaoxiao/http-router": "^0.1.0",
+    "@quanxiaoxiao/http-request": "^0.14.0",
+    "@quanxiaoxiao/http-router": "^0.4.0",
     "@quanxiaoxiao/http-utils": "^0.5.0",
-    "@quanxiaoxiao/httttp": "^0.7.0",
-    "@quanxiaoxiao/mongo": "^0.1.0",
+    "@quanxiaoxiao/httttp": "^0.24.0",
+    "@quanxiaoxiao/logger": "^0.0.1",
+    "@quanxiaoxiao/mongo": "^0.2.0",
+    "@quanxiaoxiao/node-utils": "^0.7.0",
     "@quanxiaoxiao/store": "^0.1.0",
-    "@quanxiaoxiao/utils": "^0.2.1",
+    "@quanxiaoxiao/utils": "^0.3.0",
     "ajv": "^8.12.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
