--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-SERVER_PORT=4037
+SERVER_PORT=3000
 
 MONGO_HOSTNAME=127.0.0.1
 MONGO_PORT=27017
-MONGO_DATABASE=auth_test
+MONGO_DATABASE=
 MONGO_USERNAME=
 MONGO_PASSWORD=
 
@@ -16,3 +16,7 @@ SESSION_AUTH_KEY=x-auth
 SESSION_TIME_EXPIRED=1728000000
 
 NODE_ENV=development
+
+LOGGER_FD1=logger/combine.log
+LOGGER_FD2=logger/error.log
+LOGGER_LEVEL=info
