--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "@quanxiaoxiao/datav": "^0.3.2",
-    "@quanxiaoxiao/http-request": "^0.52.0",
+    "@quanxiaoxiao/http-request": "^0.55.0",
     "@quanxiaoxiao/http-utils": "^0.25.0",
-    "@quanxiaoxiao/httttp": "^0.92.0",
+    "@quanxiaoxiao/httttp": "^0.96.0",
+    "@quanxiaoxiao/list": "^0.2.0",
     "@quanxiaoxiao/logger": "^0.0.1",
     "@quanxiaoxiao/mongo": "^0.2.0",
-    "@quanxiaoxiao/node-utils": "^0.13.0",
-    "@quanxiaoxiao/store": "^0.1.0",
+    "@quanxiaoxiao/node-utils": "^0.14.0",
+    "@quanxiaoxiao/store": "^0.3.0",
     "@quanxiaoxiao/utils": "^0.11.0",
     "ajv": "^8.12.0",
     "dayjs": "^1.11.10",
@@ -30,7 +31,7 @@
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.3",
-    "path-to-regexp": "^7.1.0",
+    "path-to-regexp": "^8.2.0",
     "shelljs": "^0.8.5"
   }
 }
