--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "eslint": "^9.3.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.3.0"
   },
   "engines": {
@@ -15,15 +16,15 @@
   },
   "dependencies": {
     "@quanxiaoxiao/datav": "^0.3.2",
-    "@quanxiaoxiao/http-request": "^0.55.0",
-    "@quanxiaoxiao/http-utils": "^0.26.0",
-    "@quanxiaoxiao/httttp": "^0.99.0",
+    "@quanxiaoxiao/http-request": "^0.56.0",
+    "@quanxiaoxiao/http-utils": "^0.27.0",
+    "@quanxiaoxiao/httttp": "^0.100.0",
     "@quanxiaoxiao/list": "^0.3.0",
     "@quanxiaoxiao/logger": "^0.0.1",
     "@quanxiaoxiao/mongo": "^0.3.0",
     "@quanxiaoxiao/node-utils": "^0.14.0",
     "@quanxiaoxiao/store": "^0.5.0",
-    "@quanxiaoxiao/utils": "^0.12.0",
+    "@quanxiaoxiao/utils": "^0.14.0",
     "ajv": "^8.12.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.4",
